src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__binary_expr-18.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            Binary(
                Binary {
                    op: Add,
                    left: GetVar(
                        GetVar {
                            name: Ident(
                                "a",
                            ),
                        },
                    ),
                    right: GetVar(
                        GetVar {
                            name: Ident(
                                "b",
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            Binary(
                Binary {
                    op: Add,
                    left: GetVar(
                        GetVar {
                            name: Ident(
                                "c",
                            ),
                        },
                    ),
                    right: GetVar(
                        GetVar {
                            name: Ident(
                                "d",
                            ),
                        },
                    ),
                },
            ),
        ),
    ],
}
