src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__binary_expr-3.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Binary(
    Binary {
        op: Div,
        left: GetVar(
            GetVar {
                name: Ident(
                    "a",
                ),
            },
        ),
        right: GetVar(
            GetVar {
                name: Ident(
                    "b",
                ),
            },
        ),
    },
)
